Bug 132113 - Resize dialog limits image width/height to 4 digits
Summary: Resize dialog limits image width/height to 4 digits
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Showfoto-Plugins (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-08-09 08:22 UTC by Martin Rubli
Modified: 2022-02-05 04:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Rubli 2006-08-09 08:22:20 UTC
Version:           0.3.1 (using KDE 3.5.3, Debian Package 4:3.5.3-1 (testing/unstable))
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.16.20

How to reproduce:
1. Load a large image (a panorama in my case) that is more than 10,000 pixels wide.
2. Choose 'Tools, Resize ...' from the menu.
3. Notice how the width is reduced to 9999.
(The resize operation itself works perfectly fine as long as the destination width is smaller than 10,000 pixels.)

Expected behavior:
The 'Width' field should display the correct size and allow for values larger than 9999.
Comment 1 Marcel Wiesweg 2006-08-11 23:59:41 UTC
SVN commit 572217 by mwiesweg:

Adapt absolute maximum in ResizeDlg to current image dimension

BUG: 132113


 M  +2 -2      imageresizedlg.cpp  


--- trunk/extragear/graphics/digikam/utilities/imageeditor/tools/imageresizedlg.cpp #572216:572217
@@ -89,13 +89,13 @@
     // -------------------------------------------------------------
     
     label    = new QLabel(i18n("Width:"), plainPage(), "w");
-    d->wInput = new KIntSpinBox(1, 9999, 1, *d->width, 10, plainPage());
+    d->wInput = new KIntSpinBox(1, QMAX(*d->width * 10, 9999), 1, *d->width, 10, plainPage());
     d->wInput->setName("w");
     topLayout->addWidget(label, 0, 0);
     topLayout->addWidget(d->wInput, 0, 1);
     
     label    = new QLabel(i18n("Height:"), plainPage());
-    d->hInput = new KIntSpinBox(1, 9999, 1, *d->height, 10, plainPage());
+    d->hInput = new KIntSpinBox(1, QMAX(*d->height * 10, 9999), 1, *d->height, 10, plainPage());
     d->hInput->setName("h");
     topLayout->addWidget(label, 0, 2);
     topLayout->addWidget(d->hInput, 0, 3);