Adapt absolute maximum in ResizeDlg to current image dimension

BUG: 132113

svn path=/trunk/extragear/graphics/digikam/; revision=572217